# rust-sdk

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
libeapp/: Cargo.toml  README.md  build.rs  eapp.lds
libeapp/macros/: Cargo.toml
libeapp/macros/src/: lib.rs
libeapp/src/: attestation.rs  ecall.rs  lib.rs  ocall.rs  sealing.rs
libeapp/src/internal/: alloc-debug.rs  alloc.rs  ecall_zone.S  malloc_zone.S  mod.rs  syscall.rs  utils.rs
libedge/: Cargo.toml
libedge/src/: alloc.rs  attestation.rs  ecall.rs  lib.rs  ocall.rs
libhapp/: .gitignore  Cargo.toml  README.md  build.rs
libhapp/.cargo/: config
libhapp/src/: attestation.rs  binary.rs  builder.rs  device.rs  ecall.rs  edge.rs  enclave.rs  lib.rs  memory.rs  ocall.rs
libhapp/src/internal/: alloc.rs  dispatcher.rs  ed25519.rs  mod.rs  utils.rs
