[package]
name                    = "edge"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
repository.workspace    = true
readme.workspace        = true
license.workspace       = true
description             = """
A common interface description for enclave and host application libraries
"""

[dependencies]

[features]
default      = []
debug_memory = []